POR/RefEdge/src/objects/Reference_Requests_and_Invitations__c.object
<CustomObject>
    <description>RefEdge Object that combines the peer data of Invitations and Reference Requests (both of which are related children of Opportunity) for comprehensive Revenue Influenced reporting.</description>
    <fields>
        <fullName>Invitation_CreatedDate_f__c</fullName>
        <formula>Invitation__r.CreatedDate</formula>
        <label>Invitation CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invitation_Name_f__c</fullName>
        <formula>Invitation__r.Name</formula>
        <label>Invitation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invitation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invitation</label>
        <referenceTo>Invitation__c</referenceTo>
        <relationshipLabel>Reference Requests and Invitations</relationshipLabel>
        <relationshipName>Reference_Requests_and_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reference Requests and Invitations</relationshipLabel>
        <relationshipName>Reference_Requests_and_Invitations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference_Request_CreatedDate_f__c</fullName>
        <formula>Reference_Request__r.CreatedDate</formula>
        <label>Reference Request CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reference_Request_Name_f__c</fullName>
        <formula>Reference_Request__r.Name</formula>
        <label>Reference Request Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Request</label>
        <referenceTo>Reference_Request__c</referenceTo>
        <relationshipLabel>Reference Requests and Invitations</relationshipLabel>
        <relationshipName>Reference_Requests_and_Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Reference Requests and Invitations</label>
    <nameField>
        <displayFormat>RRI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Requests and Invitations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>